--- a/src/pages/Tutor/tutorMain.html
+++ b/src/pages/Tutor/tutorMain.html
@@ -22,19 +22,20 @@
       <h2>Willkommen im Assignment Center</h2>
       <p>Aufgaben welcher Fakultät wollen Sie überprüfen?</p>
 
-      <!-- Fakultäten-Auswahl -->
+     <!-- Fakultäten-Auswahl -->
       <div class="faculty-selection">
-        <label for="faculty">Wähle deine Fakultät:</label>
+        <label for="faculty">Wähle deinen Kurs:</label>
         <select id="faculty">
-          <option value="">-- Fakultät auswählen --</option>
-          <option value="engineering">Ingenieurwissenschaften</option>
-          <option value="business">Wirtschaftswissenschaften</option>
-          <option value="law">Rechtswissenschaften</option>
-          <option value="medicine">Medizin</option>
-          <option value="arts">Geisteswissenschaften</option>
+          <option value="">-- Kurs auswählen --</option>
+          <option value="hci">HCI</option>
+          <option value="gbs">GBS</option>
+          <option value="mathe_2">Mathe II</option>
+          <option value="prog_2">Programmieren II</option>
+          <option value="data">Datenstrukturen</option>
         </select>
         <button id="submitBtn">Submit</button>
       </div>
+    </main>
     </main>
 
     <!-- Footer -->
