--- a/src/pages/assignment.html
+++ b/src/pages/assignment.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aufgaben Übersicht</title>
     <link rel="stylesheet" href="../styles/main.css" />
+    <!-- Font Awesome CDN link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Header -->
     <header>
       <h1 id="headerTitle">Assignment Center 2.0</h1>
       <nav>
-        <!-- Navigationslinks zu verschiedenen Seiten -->
         <a href="../pages/main.html">Home</a>
         <a href="../pages/assignment.html">Aufgaben</a>
         <a href="../pages/profile.html">Profil</a>
@@ -23,6 +27,7 @@
     <main>
       <h2>Aufgaben Übersicht</h2>
       <p id="facultyName" class="faculty-display"></p>
+      <p>Tutor: Leon Wachowski</p>
 
       <!-- Aufgaben-Tabelle zur Anzeige der eingereichten Aufgaben -->
       <table id="assignmentTable">
@@ -42,12 +47,18 @@
             <td>Projekt 1</td>
             <td>Max Mustermann</td>
             <td>5 Stunden</td>
-            <td>Fertig</td>
+            <td><span class="status-label fertig">Fertig</span></td>
             <td>projekt1.pdf</td>
             <td>85</td>
           </tr>
         </tbody>
       </table>
+
+      <!-- Punkteübersicht -->
+      <div id="studentPointsSection">
+        <h3>Gesamtpunkte</h3>
+        <p id="studentPointsDisplay">Max Mustermann hat insgesamt 85 Punkte.</p>
+      </div>
 
       <!-- Bereich zum Hochladen eines neuen Assignments -->
       <div class="upload-section">
@@ -77,12 +88,40 @@
           <select id="status" name="status" required>
             <option value="Fertig">Fertig</option>
             <option value="Nicht fertig">Nicht fertig</option>
-            <option value="Abgegeben">Abgegeben</option>
           </select>
 
           <!-- Button zum Absenden des Formulars -->
-          <button type="submit">Hochladen</button>
+         <button type="submit">
+            <i class="fas fa-upload"></i> Hochladen
+          </button>
         </form>
+
+        <div class="button-container">
+             
+          <a href="../pages/chatWithTutor.html">
+          <button id="chatTutorBtn">
+            <i class="fas fa-comment-dots"></i> Chat
+          </button>
+        </a>
+
+        <button id="showRoomInfoBtn">
+          <i class="fas fa-info-circle"></i> Rauminfo anzeigen
+        </button>
+        </div>
+
+    
+
+      <!-- Bereich für Rauminfo und Foto -->
+      <div id="roomInfo" class="room-info" style="display: none;">
+        <h3>Raum- und Adressinformationen</h3>
+        <p><strong>Raum:</strong> 101</p>
+        <p><strong>Adresse:</strong> Musterstraße 123, 12345 Musterstadt</p>
+        <div class="room-photo">
+          <img
+            src="../../public/gps.jpg"
+            alt="Foto des Raums"
+          />
+        </div>
       </div>
     </main>
 
@@ -92,78 +131,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script>
-      // Fakultät aus localStorage auslesen
-      const selectedFaculty = localStorage.getItem("selectedFaculty");
-
-      // Fakultäten-Mapping, um den Fachbereich anzuzeigen
-      const facultyNameMap = {
-        engineering: "Ingenieurwissenschaften",
-        business: "Wirtschaftswissenschaften",
-        law: "Rechtswissenschaften",
-        medicine: "Medizin",
-        arts: "Geisteswissenschaften",
-      };
-
-      // Fakultätsnamen übersetzen und anzeigen
-      const facultyDisplay = selectedFaculty
-        ? facultyNameMap[selectedFaculty] || "Keine Fakultät ausgewählt"
-        : "Keine Fakultät ausgewählt";
-
-      // Fakultätsnamen im HTML anzeigen
-      document.getElementById("facultyName").innerText =
-        "Fakultät: " + facultyDisplay;
-
-      // Fakultätsname auch im Header-Titel anzeigen
-      const headerTitle = document.getElementById("headerTitle");
-      headerTitle.textContent += selectedFaculty ? ` - ${facultyDisplay}` : "";
-
-      // Event-Listener für die Datei-Auswahl
-      const fileUpload = document.getElementById("fileUpload");
-      fileUpload.addEventListener("change", function () {
-        const file = this.files[0];
-        // Anzeige des Dateinamens nach Auswahl einer Datei
-        if (file) {
-          document.getElementById("fileNameDisplay").innerText =
-            "Ausgewählte Datei: " + file.name;
-        } else {
-          document.getElementById("fileNameDisplay").innerText = "";
-        }
-      });
-
-      // Event-Listener für das Absenden des Formulars
-      document
-        .getElementById("assignmentForm")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-
-          // Werte aus den Formularfeldern auslesen
-          const projectName = document.getElementById("projectName").value;
-          const studentName = document.getElementById("studentName").value;
-          const timeSpent = document.getElementById("timeSpent").value;
-          const status = document.getElementById("status").value;
-          const fileName = fileUpload.files[0]
-            ? fileUpload.files[0].name
-            : "Keine Datei";
-
-          // Neue Zeile in der Tabelle erstellen
-          const table = document
-            .getElementById("assignmentTable")
-            .getElementsByTagName("tbody")[0];
-          const newRow = table.insertRow();
-
-          // Zellen mit den Formularwerten füllen
-          newRow.insertCell(0).innerText = projectName;
-          newRow.insertCell(1).innerText = studentName;
-          newRow.insertCell(2).innerText = timeSpent + " Stunden";
-          newRow.insertCell(3).innerText = status;
-          newRow.insertCell(4).innerText = fileName;
-          newRow.insertCell(5).innerText = "--";  // Platzhalter für Punkte
-
-          // Formular zurücksetzen und Datei-Anzeige zurücksetzen
-          document.getElementById("assignmentForm").reset();
-          document.getElementById("fileNameDisplay").innerText = "";
-        });
-    </script>
+    <script src="../scripts/assignment.js"></script>
   </body>
 </html>
