see_password, allerts-passwor-courses, laoding-gif, delete old assignments, uploading new

--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
@@ -9,10 +9,11 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Assignment Center 2.0</h1>
+      <a href="../pages/main.html">
+        <h1>Assignment Center 2.0</h1>
+      </a>
       <nav>
         <a href="../pages/main.html">Home</a>
-        <a href="../pages/chatWithTutor.html">Chat</a>
         <a href="../pages/profile.html">Profil</a>
         <a href="../pages/login.html">Abmelden</a>
       </nav>
@@ -35,6 +36,9 @@
           <option value="data">Datenstrukturen</option>
         </select>
         <button id="submitBtn">Submit</button>
+        <div id="notSelectedCourse">
+          <p></p>
+        </div>
       </div>
     </main>
 
