--- a/src/pages/Tutor/chatWithStudent.html
+++ b/src/pages/Tutor/chatWithStudent.html
@@ -9,7 +9,9 @@
   <body>
     <!-- Header -->
     <header>
-      <h1 id="headerTitle">Assignment Center 2.0</h1>
+      <a href="../Tutor/tutorMain.html">
+        <h1 id="headerTitle">Assignment Center 2.0</h1>
+      </a>
       <nav>
         <a href="../Tutor/tutorMain.html">Home</a>
         <a href="../Tutor/assignmentTutor.html">Aufgaben</a>
