--- a/src/pages/Tutor/profileTutor.html
+++ b/src/pages/Tutor/profileTutor.html
@@ -10,7 +10,9 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Assignment Center 2.0 (Tutor)</h1>
+      <a href="../Tutor/tutorMain.html">
+        <h1>Assignment Center 2.0 (Tutor)</h1>
+      </a>
       <nav>
         <!-- Navigation mit Links zu verschiedenen Seiten -->
         <a href="../Tutor/tutorMain.html">Home</a>
