--- a/src/pages/Tutor/tutorMain.html
+++ b/src/pages/Tutor/tutorMain.html
@@ -9,7 +9,9 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Assignment Center 2.0 (Tutor Page)</h1>
+      <a href="../Tutor/tutorMain.html">
+        <h1>Assignment Center 2.0 (Tutor)</h1>
+      </a>
       <nav>
         <a href="../Tutor/tutorMain.html">Home</a>
         <a href="../Tutor/profileTutor.html">Profil</a>
@@ -34,6 +36,9 @@
           <option value="data">Datenstrukturen</option>
         </select>
         <button id="submitBtn">Submit</button>
+        <div id="notSelectedCourse">
+          <p></p>
+        </div>
       </div>
     </main>
     </main>
