--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -10,7 +10,9 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Assignment Center 2.0</h1>
+      <a href="../pages/main.html">
+        <h1>Assignment Center 2.0</h1>
+      </a>
       <nav>
         <!-- Navigation mit Links zu verschiedenen Seiten -->
         <a href="../pages/main.html">Home</a>
