--- a/src/pages/assignment.html
+++ b/src/pages/assignment.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aufgaben Übersicht</title>
     <link rel="stylesheet" href="../styles/main.css" />
-    <!-- Font Awesome CDN link -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -14,7 +13,9 @@
   <body>
     <!-- Header -->
     <header>
-      <h1 id="headerTitle">Assignment Center 2.0</h1>
+      <a href="../pages/main.html">
+        <h1 id="headerTitle">Assignment Center 2.0</h1>
+      </a>
       <nav>
         <a href="../pages/main.html">Home</a>
         <a href="../pages/assignment.html">Aufgaben</a>
@@ -33,6 +34,7 @@
       <table id="assignmentTable">
         <thead>
           <tr>
+            <th></th>
             <th>Name des Projekts</th>
             <th>Name vom Studenten</th>
             <th>Zeit</th>
@@ -42,8 +44,8 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Beispiel einer Aufgabe in der Tabelle -->
           <tr>
+            <td><input type="checkbox" class="select-file" /></td>
             <td>Projekt 1</td>
             <td>Max Mustermann</td>
             <td>5 Stunden</td>
@@ -54,6 +56,10 @@
         </tbody>
       </table>
 
+      <div class="button-container">
+        <button class="delete-file-btn">Löschen</button>
+      </div>
+
       <!-- Punkteübersicht -->
       <div id="studentPointsSection">
         <h3>Gesamtpunkte</h3>
@@ -61,16 +67,14 @@
       </div>
 
       <!-- Bereich zum Hochladen eines neuen Assignments -->
-      <div class="upload-section">
+      <div id="mainContent">
         <h3>Neues Assignment hochladen</h3>
         <form id="assignmentForm">
           <!-- Eingabefelder für das neue Assignment -->
           <label for="projectName">Projektname:</label>
           <input type="text" id="projectName" name="projectName" required />
-
           <label for="studentName">Name des Studenten:</label>
           <input type="text" id="studentName" name="studentName" required />
-
           <label for="timeSpent">Zeit (in Stunden):</label>
           <input
             type="number"
@@ -79,26 +83,28 @@
             min="0"
             required
           />
-
           <label for="fileUpload">Datei hochladen (PDF):</label>
           <input type="file" id="fileUpload" accept=".pdf" required />
           <p id="fileNameDisplay" style="font-size: 0.9rem; color: #555"></p>
-
           <label for="status">Status:</label>
           <select id="status" name="status" required>
             <option value="Fertig">Fertig</option>
             <option value="Nicht fertig">Nicht fertig</option>
           </select>
-
           <!-- Button zum Absenden des Formulars -->
-         <button type="submit">
-            <i class="fas fa-upload"></i> Hochladen
-          </button>
+          <button type="submit"><i class="fas fa-upload"></i> Hochladen</button>
         </form>
+      </div>
 
-        <div class="button-container">
-             
-          <a href="../pages/chatWithTutor.html">
+      <div class="upload-section">
+        <div id="loadingScreen">
+          <img src="../../public/hapi-cat.gif" alt="Lädt..." />
+          <p>Bitte warten, die Datei wird hochgeladen...</p>
+        </div>
+      </div>
+
+      <div class="button-container">
+        <a href="../pages/chatWithTutor.html">
           <button id="chatTutorBtn">
             <i class="fas fa-comment-dots"></i> Chat
           </button>
@@ -107,20 +113,15 @@
         <button id="showRoomInfoBtn">
           <i class="fas fa-info-circle"></i> Rauminfo anzeigen
         </button>
-        </div>
-
-    
+      </div>
 
       <!-- Bereich für Rauminfo und Foto -->
-      <div id="roomInfo" class="room-info" style="display: none;">
+      <div id="roomInfo" class="room-info" style="display: none">
         <h3>Raum- und Adressinformationen</h3>
         <p><strong>Raum:</strong> 101</p>
         <p><strong>Adresse:</strong> Musterstraße 123, 12345 Musterstadt</p>
         <div class="room-photo">
-          <img
-            src="../../public/gps.jpg"
-            alt="Foto des Raums"
-          />
+          <img src="../../public/gps.jpg" alt="Foto des Raums" />
         </div>
       </div>
     </main>
