--- a/src/pages/chatWithTutor.html
+++ b/src/pages/chatWithTutor.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,9 @@
   <body>
     <!-- Header -->
     <header>
-      <h1 id="headerTitle">Assignment Center 2.0</h1>
+      <a href="../pages/main.html">
+        <h1 id="headerTitle">Assignment Center 2.0</h1>
+      </a>
       <nav>
         <a href="../pages/main.html">Home</a>
         <a href="../pages/profile.html">Profil</a>
