--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
     <!-- Verknüpft das Stylesheet für das Design der Login-Seite -->
-    <link rel="stylesheet" href="../styles/main.css">
-</head>
-<body class="login-sec">
+    <link rel="stylesheet" href="../styles/main.css" />
+  </head>
+  <body class="login-sec">
     <!-- Container für das Login-Formular -->
     <div class="login-container">
-        <h2>Login</h2>
-        <!-- Das Login-Formular -->
-        <form id="loginForm">
-            <!-- Eingabefeld für den Benutzernamen -->
-            <label for="username">Benutzername:</label>
-            <input type="text" id="username" placeholder="Gib deinen Benutzernamen ein" required>
+      <h2>Login</h2>
+      <!-- Das Login-Formular -->
+      <form id="loginForm">
+        <!-- Eingabefeld für den Benutzernamen -->
+        <label for="username">Benutzername:</label>
+        <input
+          type="text"
+          id="username"
+          placeholder="Gib deinen Benutzernamen ein"
+          required
+        />
 
-            <!-- Eingabefeld für das Passwort -->
-            <label for="password">Passwort:</label>
-            <input type="password" id="password" placeholder="Gib dein Passwort ein" required>
+        <label for="password">Passwort:</label>
+        <div class="password-container">
+          <input
+            type="password"
+            id="password"
+            placeholder="Gib dein Passwort ein"
+            required
+          />
+          <span class="toggle-password" id="togglePassword">👁️</span>
+        </div>
 
-            <!-- Login-Button -->
-            <div class="b-container"><button type="submit">Login</button></div>
-        </form>
+        <!-- Login-Button -->
+        <div class="b-container"><button type="submit">Login</button></div>
+      </form>
+      <div id="loginError">
+        <p></p>
+      </div>
     </div>
 
     <!-- Verknüpft die JavaScript-Datei, die das Login-Verhalten steuert -->
     <script src="../scripts/login.js"></script>
-</body>
+  </body>
 </html>
