--- a/src/pages/assignment.html
+++ b/src/pages/assignment.html
@@ -47,7 +47,6 @@
         </thead>
         <tbody>
           <tr>
-            <!-- Zeile für ein eingereichtes Projekt -->
             <td><input type="checkbox" class="select-file" /></td>
             <td>Projekt 1</td>
             <td>Max Mustermann</td>
@@ -67,7 +66,9 @@
       <!-- Punkteübersicht des Studenten -->
       <div id="studentPointsSection">
         <h3>Gesamtpunkte</h3>
-        <p id="studentPointsDisplay">Max Mustermann hat insgesamt 85 Punkte.</p>
+        <p id="studentPointsDisplay">
+          Du hast: <span id="totalPoints">85</span> Punkte
+        </p>
       </div>
 
       <!-- Bereich zum Hochladen eines neuen Assignments -->
@@ -77,9 +78,6 @@
           <!-- Eingabefelder für das neue Assignment -->
           <label for="projectName">Projektname:</label>
           <input type="text" id="projectName" name="projectName" required />
-
-          <label for="studentName">Name des Studenten:</label>
-          <input type="text" id="studentName" name="studentName" required />
 
           <label for="timeSpent">Zeit (in Stunden):</label>
           <input
